change: ctrl api host edit move id from path to body
